[gd_scene load_steps=22 format=3 uid="uid://ccvacaspcraap"]

[ext_resource type="Script" path="res://scripts/skeleton_body.gd" id="1_qva60"]
[ext_resource type="Texture2D" uid="uid://pc2dryqghdbx" path="res://sprites/Pixel Crawler/Enemy/Skeleton Crew/Skeleton - Base/Idle/Idle-Sheet.png" id="1_tfskf"]
[ext_resource type="Texture2D" uid="uid://elq3id8m2p00" path="res://sprites/Pixel Crawler/Enemy/Skeleton Crew/Skeleton - Base/Run/Run-Sheet.png" id="2_g07qy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e20w5"]
atlas = ExtResource("1_tfskf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5n6t"]
atlas = ExtResource("1_tfskf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rotpo"]
atlas = ExtResource("1_tfskf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xy6k"]
atlas = ExtResource("1_tfskf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6614p"]
atlas = ExtResource("2_g07qy")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfi5l"]
atlas = ExtResource("2_g07qy")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_alt1d"]
atlas = ExtResource("2_g07qy")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro0vi"]
atlas = ExtResource("2_g07qy")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ghkk"]
atlas = ExtResource("2_g07qy")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2qk6"]
atlas = ExtResource("2_g07qy")
region = Rect2(320, 32, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vccc8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e20w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5n6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rotpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xy6k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6614p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfi5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alt1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro0vi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ghkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2qk6")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_p0836"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_d2kmm"]
resource_name = "damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hcd1t"]
_data = {
"RESET": SubResource("Animation_p0836"),
"damaged": SubResource("Animation_d2kmm")
}

[sub_resource type="Gradient" id="Gradient_qmvlr"]
offsets = PackedFloat32Array(0, 0.733766)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vy0hd"]
gradient = SubResource("Gradient_qmvlr")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_7mgua"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eno2g"]
radius = 19.0

[node name="SkeletonBody" type="CharacterBody2D"]
script = ExtResource("1_qva60")

[node name="Node2D" type="Node2D" parent="."]

[node name="SkeletonSprite" type="AnimatedSprite2D" parent="Node2D"]
sprite_frames = SubResource("SpriteFrames_vccc8")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.802119

[node name="damage_highlight" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hcd1t")
}

[node name="SkeleShadow" type="PointLight2D" parent="."]
position = Vector2(-0.5, 16)
scale = Vector2(0.390625, 0.25)
energy = 0.3
blend_mode = 1
texture = SubResource("GradientTexture2D_vy0hd")

[node name="SkeletonCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_7mgua")

[node name="SkeletonNavigation" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Skele_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skele_hitbox"]
shape = SubResource("CircleShape2D_eno2g")

[node name="take_dmg_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="Enemyhealthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -11.0
offset_top = 20.0
offset_right = 12.0
offset_bottom = 26.0
show_percentage = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Skele_hitbox" to="." method="_on_skele_hitbox_body_entered"]
[connection signal="body_exited" from="Skele_hitbox" to="." method="_on_skele_hitbox_body_exited"]
[connection signal="timeout" from="take_dmg_cooldown" to="." method="_on_take_dmg_cooldown_timeout"]
